[package]
name = "yewxel"
version = "0.1.0"
edition = "2021"
description = "Xel toolkit elements"

[dependencies]
yew = "0.19"
web-sys = { version = "*", features = [
  "Document",
  "Window",
  "HtmlCollection",
  "MediaQueryList",
  "MouseEvent",
  "Event",
  "EventTarget",
  "HtmlElement",
  "DomRect",
  "Node",
  "KeyframeEffect",
  "Animation",
  "EffectTiming",
  "AnimationEffect",
  "OptionalEffectTiming"
] }
derive_more = "^0.99"
wasm-bindgen = "0.2.83"
js-sys = "^0.3"
serde-wasm-bindgen = "0.4.5"

[build-dependencies]
lightningcss = { git = "https://github.com/openxd/lightningcss.git" }
parcel_selectors = { git = "https://github.com/openxd/lightningcss.git" }
cssparser = "0.29.6"

[features]
default = ["theme-adwaita", "mode-dark", "element-x-label", "element-x-button", "element-x-tooltip"]
# Supported Themes
theme-adwaita = []
theme-fluent = []
theme-cupertino = []
# Supported Modes
mode-dark = []
mode-light = []
# Supported Elements
element-x-label = []
element-x-tooltip = []
element-x-button = []
element-x-buttons = []
element-x-menubar = []

[workspace]
members = ["example", "."]
