[package]
name = "yewxel"
version = "0.1.0"
edition = "2021"
description = "Xel toolkit elements"

[dependencies]
yew = "0.20"
web-sys = { version = "*", features = [
  "Document",
  "Window",
  "HtmlCollection",
  "MediaQueryList",
] }
derive_more = { version = "^0.99", optional = true }
wasm-bindgen = "0.2.83"
js-sys = { version = "^0.3", optional = true }
serde-wasm-bindgen = { version = "0.4.5", optional = true }
fluent = { version = "^0.16", optional = true }
prokio = { version = "^0.1", optional = true }
wasm-bindgen-futures = { version = "^0.4", optional = true }
regex = { version = "^1.5", optional = true }
titlecase = { version = "^2.2", optional = true }

[build-dependencies]
lightningcss = { git = "https://github.com/openxd/lightningcss.git" }
parcel_selectors = { git = "https://github.com/openxd/lightningcss.git" }
cssparser = "0.29.6"

[features]
default = ["feature-intl"]
# Supported Features
feature-intl = [
  "web-sys/Url",
  "web-sys/Request",
  "web-sys/Response",
  "web-sys/RequestMode",
  "web-sys/RequestInit",
  "fluent",
  "prokio",
  "wasm-bindgen-futures",
]
# Supported Themes
theme-adwaita = []
theme-fluent = []
theme-cupertino = []
# Supported Modes
mode-dark = []
mode-light = []
# Supported Elements
element-x-label = []
element-x-message = ["regex", "titlecase"]
element-x-tooltip = [
  "web-sys/DomRect",
  "web-sys/AnimationEffect",
  "web-sys/KeyframeEffect",
  "web-sys/OptionalEffectTiming",
  "web-sys/EffectTiming",
  "web-sys/Animation",
  "js-sys",
  "serde-wasm-bindgen",
]
element-x-button = ["web-sys/MouseEvent", "web-sys/HtmlElement", "derive_more"]
element-x-buttons = []
element-x-menuitem = [
  "js-sys",
  "serde-wasm-bindgen",
  "web-sys/Animation",
  "web-sys/Element",
  "web-sys/DomRect",
  "web-sys/HtmlElement",
  "web-sys/MouseEvent",
  "web-sys/KeyboardEvent",
  "web-sys/FocusEvent",
  "web-sys/PointerEvent",
  "web-sys/AnimationEffect",
  "web-sys/KeyframeEffect",
  "web-sys/OptionalEffectTiming",
  "web-sys/EffectTiming",
  "web-sys/Animation",
  "web-sys/CssStyleDeclaration",
  "prokio",
  "wasm-bindgen-futures",
]
element-x-menubar = []

[workspace]
members = ["example", "."]
