[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"yew" = "0.19"
yewxel = { path = "../", features = [
  "mode-dark",
  "mode-light",
  "theme-cupertino",
  "element-x-button",
  "element-x-label",
  "element-x-tooltip",
  "feature-intl",
  "element-x-message"
] }
